
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct snd_efw_phys_meters {int dummy; } ;
struct snd_efw {int dummy; } ;
typedef int __be32 ;


 int EFC_CAT_HWINFO ;
 int EFC_CMD_HWINFO_GET_POLLED ;
 int be32_to_cpus (int *) ;
 int efw_transaction (struct snd_efw*,int ,int ,int *,int ,int *,unsigned int) ;

int snd_efw_command_get_phys_meters(struct snd_efw *efw,
        struct snd_efw_phys_meters *meters,
        unsigned int len)
{
 u32 *buf = (u32 *)meters;
 unsigned int i;
 int err;

 err = efw_transaction(efw, EFC_CAT_HWINFO,
         EFC_CMD_HWINFO_GET_POLLED,
         ((void*)0), 0, (__be32 *)meters, len);
 if (err >= 0)
  for (i = 0; i < len / sizeof(u32); i++)
   be32_to_cpus(&buf[i]);

 return err;
}
